# Jake_CircuitPython_SwitecX25

./: LICENSE  README.rst  README.rst.license  jake_switecx25.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
examples/: switecx25_simpletest.py
